# procureiq-python

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  test_render_apis.py
contracts/openapi/: v1.yaml
scripts/: db_b2.py
src/api/: main.py
src/api/rest/v1/handlers/: analytics.py  email.py  fieldservice.py
src/features/analytics/: schemas.py  service.py
src/features/email/: models.py  service.py
src/features/fieldservice/: models.py  queries.py
src/infra/: database.py
src/infra/tracing/: otel.py
tests/integration/: test_fieldservice_api.py  test_java_backend_api.py
tests/unit/: test_email.py
