[tool.poetry]
name = "procureiq-python"
version = "0.1.0"
description = "ProcureIQ Python Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-instrumentation-sqlalchemy = "^0.41b0"
opentelemetry-exporter-otlp = "^1.20.0"

[tool.poetry.scripts]
db-b2 = "scripts.db_b2:main"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.0.270"
mypy = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
